--- a/css/rectangle/rectangle.css
+++ b/css/rectangle/rectangle.css
@@ -57,7 +57,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%) translateZ(0);
     border: 7px solid black; }
 .rect-background {
   width: 0;
@@ -216,6 +216,8 @@ body {
 .menu-message {
   background: white;
   display: block; }
+  .menu-message-tab {
+    transition: opacity 1s ease-out; }
   .menu-message-contact {
     display: flex;
     flex-direction: column;
@@ -235,14 +237,19 @@ body {
     .menu-message-contact-input {
       border: 2px solid black;
       line-height: 1.5em;
-      padding: 5px; }
+      padding: 5px;
+      font-size: 12pt; }
       .menu-message-contact-input:focus {
-        border: 2px solid black; }
+        outline: none;
+        box-shadow: inset 0px 0px 13px 0px rgba(0, 0, 0, 0.31); }
     .menu-message-contact-label {
       font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
       font-weight: bold;
       margin: 5px 0px; }
+    .menu-message-contact-button {
+      width: 100%; }
     .menu-message-contact-send {
+      position: relative;
       font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
       width: calc(100% - 10px);
       background: black;
@@ -250,15 +257,32 @@ body {
       text-align: center;
       margin-top: 20px;
       padding: 5px;
-      cursor: pointer; }
+      cursor: pointer;
+      animation-delay: 0.3s; }
   .menu-message-confirm {
-    display: none; }
+    display: none;
+    opacity: 0; }
+    .menu-message-confirm-text {
+      flex: 1;
+      font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+      color: black;
+      text-align: center; }
+    .menu-message-confirm-redo {
+      flex: 1;
+      font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+      width: calc(100% - 10px);
+      background: black;
+      color: white;
+      text-align: center;
+      margin-top: 20px;
+      padding: 5px;
+      cursor: pointer;
+      animation-delay: 0.3s; }
   .menu-message-speech {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    left: 0;
     z-index: 1;
-    transform: translateX(-50%) translateY(-50%) translateX(130px) translateY(363.5px);
     pointer-events: none; }
     .menu-message-speech > svg {
       stroke: black;
@@ -285,6 +309,26 @@ body {
   color: gray;
   cursor: auto; }
 
+@keyframes shake {
+  0%,
+    100% {
+    transform: translateZ(0); }
+  10%,
+    30%,
+    50%,
+    70%,
+    90% {
+    transform: translate3d(-6px, 0, 0); }
+  20%,
+    40%,
+    60%,
+    80% {
+    transform: translate3d(6px, 0, 0); } }
+@keyframes sendButton {
+  from {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); }
+  to {
+    clip-path: polygon(100% 0, 100% 0, 100% 100%, 100% 100%); } }
 #projects-awge:hover {
   color: white;
   background-image: url("../../assets/project-awge.png"); }
@@ -747,7 +791,7 @@ body {
   width: 3px;
   height: 3px;
   background: transparent;
-  box-shadow: 1087px 630px #FFF , 251px 1298px #FFF , 210px 496px #FFF , 1663px 993px #FFF , 1048px 1081px #FFF , 954px 979px #FFF , 1135px 295px #FFF , 17px 86px #FFF , 1558px 1687px #FFF , 604px 1615px #FFF , 925px 262px #FFF , 323px 533px #FFF , 944px 1071px #FFF , 1408px 1247px #FFF , 1105px 158px #FFF , 991px 1308px #FFF , 786px 229px #FFF , 1945px 1658px #FFF , 1034px 1231px #FFF , 1781px 369px #FFF , 1117px 1869px #FFF , 1239px 938px #FFF , 1157px 1338px #FFF , 1504px 629px #FFF , 446px 1764px #FFF , 646px 1597px #FFF , 1667px 8px #FFF , 517px 865px #FFF , 128px 1463px #FFF , 84px 1655px #FFF , 1760px 773px #FFF , 1537px 1587px #FFF , 1743px 959px #FFF , 1511px 78px #FFF , 1167px 547px #FFF , 82px 453px #FFF , 519px 1709px #FFF , 1147px 1923px #FFF , 733px 1765px #FFF , 1443px 1358px #FFF , 168px 851px #FFF , 261px 1920px #FFF , 543px 869px #FFF , 1920px 167px #FFF , 101px 208px #FFF , 577px 1238px #FFF , 972px 1576px #FFF , 1317px 1684px #FFF , 1554px 397px #FFF , 1903px 310px #FFF , 161px 1544px #FFF , 1136px 334px #FFF , 235px 1963px #FFF , 1575px 1715px #FFF , 1881px 1160px #FFF , 223px 1651px #FFF , 588px 1437px #FFF , 1063px 696px #FFF , 228px 1070px #FFF , 251px 544px #FFF , 528px 489px #FFF , 1879px 707px #FFF , 1782px 1932px #FFF , 972px 650px #FFF , 868px 1872px #FFF , 683px 1899px #FFF , 1878px 314px #FFF , 1274px 851px #FFF , 1013px 403px #FFF , 1096px 436px #FFF , 79px 1841px #FFF , 317px 1184px #FFF , 1350px 171px #FFF , 1590px 1082px #FFF , 1334px 1584px #FFF , 1633px 755px #FFF , 1863px 1665px #FFF , 243px 1759px #FFF , 1229px 948px #FFF , 1605px 1271px #FFF , 1840px 1309px #FFF , 1241px 268px #FFF , 1401px 895px #FFF , 159px 323px #FFF , 501px 716px #FFF , 229px 113px #FFF , 764px 164px #FFF , 911px 677px #FFF , 1052px 888px #FFF , 1653px 1026px #FFF , 1568px 1068px #FFF , 1012px 1486px #FFF , 1097px 1134px #FFF , 366px 421px #FFF , 310px 640px #FFF , 1120px 1479px #FFF , 1177px 278px #FFF , 339px 1007px #FFF , 175px 1616px #FFF , 845px 774px #FFF , 422px 1101px #FFF , 767px 60px #FFF , 1550px 1829px #FFF , 1805px 726px #FFF , 381px 1908px #FFF , 1087px 1280px #FFF , 130px 1858px #FFF , 878px 1840px #FFF , 918px 1967px #FFF , 1788px 76px #FFF , 1258px 932px #FFF , 451px 1518px #FFF , 580px 419px #FFF , 1783px 493px #FFF , 669px 116px #FFF , 640px 1353px #FFF , 1525px 437px #FFF , 706px 1506px #FFF , 656px 808px #FFF , 1215px 117px #FFF , 88px 983px #FFF , 1971px 150px #FFF , 1254px 269px #FFF , 1182px 1725px #FFF , 1925px 543px #FFF , 1580px 1839px #FFF , 1872px 1279px #FFF , 493px 438px #FFF , 562px 1556px #FFF , 743px 1496px #FFF , 600px 1478px #FFF , 588px 1545px #FFF , 799px 1855px #FFF , 1593px 1254px #FFF , 688px 172px #FFF , 525px 714px #FFF , 1638px 343px #FFF , 1524px 1750px #FFF , 554px 858px #FFF , 372px 1388px #FFF , 1851px 39px #FFF , 1921px 808px #FFF , 215px 500px #FFF , 616px 85px #FFF , 865px 1913px #FFF , 574px 832px #FFF , 1784px 193px #FFF , 840px 1741px #FFF , 1789px 1218px #FFF , 198px 1868px #FFF , 620px 799px #FFF;
+  box-shadow: 1150px 1237px #FFF , 1721px 1079px #FFF , 1873px 636px #FFF , 1003px 1854px #FFF , 165px 1789px #FFF , 803px 312px #FFF , 1478px 33px #FFF , 256px 1466px #FFF , 469px 100px #FFF , 1887px 1106px #FFF , 474px 1295px #FFF , 196px 547px #FFF , 1391px 89px #FFF , 1540px 126px #FFF , 1743px 1847px #FFF , 1800px 1896px #FFF , 1411px 174px #FFF , 1341px 413px #FFF , 1665px 487px #FFF , 1168px 667px #FFF , 126px 1166px #FFF , 137px 1636px #FFF , 301px 209px #FFF , 1198px 853px #FFF , 1642px 1790px #FFF , 204px 1352px #FFF , 347px 1466px #FFF , 1144px 1390px #FFF , 1487px 525px #FFF , 1011px 463px #FFF , 1191px 1563px #FFF , 673px 933px #FFF , 1460px 1835px #FFF , 1315px 309px #FFF , 1457px 467px #FFF , 1913px 1066px #FFF , 522px 369px #FFF , 170px 895px #FFF , 538px 1936px #FFF , 927px 1497px #FFF , 175px 955px #FFF , 1457px 1080px #FFF , 1484px 207px #FFF , 1744px 1759px #FFF , 221px 42px #FFF , 1545px 341px #FFF , 1255px 1963px #FFF , 338px 789px #FFF , 1278px 433px #FFF , 1298px 1688px #FFF , 271px 1562px #FFF , 188px 1968px #FFF , 239px 849px #FFF , 1441px 420px #FFF , 1836px 1994px #FFF , 1964px 1253px #FFF , 841px 741px #FFF , 830px 1562px #FFF , 1543px 686px #FFF , 193px 1456px #FFF , 548px 1133px #FFF , 1658px 1500px #FFF , 978px 1237px #FFF , 551px 1883px #FFF , 1523px 1177px #FFF , 1868px 1890px #FFF , 1418px 935px #FFF , 793px 1268px #FFF , 236px 535px #FFF , 1022px 872px #FFF , 1174px 1633px #FFF , 1695px 432px #FFF , 982px 1785px #FFF , 1784px 24px #FFF , 57px 1423px #FFF , 139px 1139px #FFF , 1593px 483px #FFF , 871px 64px #FFF , 548px 1914px #FFF , 1238px 1939px #FFF , 608px 1708px #FFF , 1114px 1824px #FFF , 783px 1094px #FFF , 1608px 1223px #FFF , 1776px 1099px #FFF , 354px 1907px #FFF , 1074px 290px #FFF , 131px 835px #FFF , 1635px 1483px #FFF , 502px 1139px #FFF , 1041px 1006px #FFF , 1524px 1245px #FFF , 549px 1725px #FFF , 750px 1093px #FFF , 1697px 1188px #FFF , 446px 1004px #FFF , 556px 1205px #FFF , 1069px 1569px #FFF , 600px 1178px #FFF , 426px 107px #FFF , 346px 1977px #FFF , 232px 832px #FFF , 1586px 1914px #FFF , 1394px 292px #FFF , 85px 860px #FFF , 914px 721px #FFF , 1278px 1799px #FFF , 1121px 70px #FFF , 1676px 500px #FFF , 1427px 777px #FFF , 1632px 554px #FFF , 465px 1447px #FFF , 296px 1302px #FFF , 1116px 1868px #FFF , 1545px 1364px #FFF , 581px 1305px #FFF , 519px 824px #FFF , 920px 1239px #FFF , 555px 569px #FFF , 1297px 458px #FFF , 772px 556px #FFF , 1773px 1018px #FFF , 607px 290px #FFF , 1242px 1767px #FFF , 1358px 648px #FFF , 845px 981px #FFF , 287px 656px #FFF , 1044px 590px #FFF , 682px 643px #FFF , 1981px 1446px #FFF , 809px 1849px #FFF , 1583px 1834px #FFF , 22px 1188px #FFF , 1211px 967px #FFF , 1899px 1413px #FFF , 1233px 820px #FFF , 50px 528px #FFF , 1820px 1874px #FFF , 1696px 1445px #FFF , 210px 1429px #FFF , 1119px 1628px #FFF , 1659px 1297px #FFF , 1274px 481px #FFF , 1865px 832px #FFF , 1822px 398px #FFF , 979px 172px #FFF , 1278px 1096px #FFF , 1444px 137px #FFF , 1360px 1547px #FFF , 415px 1396px #FFF , 1581px 507px #FFF;
   animation: animStar 150s linear infinite;
   position: absolute;
   top: 0;
@@ -759,6 +803,6 @@ body {
     width: 3px;
     height: 3px;
     background: transparent;
-    box-shadow: 1087px 630px #FFF , 251px 1298px #FFF , 210px 496px #FFF , 1663px 993px #FFF , 1048px 1081px #FFF , 954px 979px #FFF , 1135px 295px #FFF , 17px 86px #FFF , 1558px 1687px #FFF , 604px 1615px #FFF , 925px 262px #FFF , 323px 533px #FFF , 944px 1071px #FFF , 1408px 1247px #FFF , 1105px 158px #FFF , 991px 1308px #FFF , 786px 229px #FFF , 1945px 1658px #FFF , 1034px 1231px #FFF , 1781px 369px #FFF , 1117px 1869px #FFF , 1239px 938px #FFF , 1157px 1338px #FFF , 1504px 629px #FFF , 446px 1764px #FFF , 646px 1597px #FFF , 1667px 8px #FFF , 517px 865px #FFF , 128px 1463px #FFF , 84px 1655px #FFF , 1760px 773px #FFF , 1537px 1587px #FFF , 1743px 959px #FFF , 1511px 78px #FFF , 1167px 547px #FFF , 82px 453px #FFF , 519px 1709px #FFF , 1147px 1923px #FFF , 733px 1765px #FFF , 1443px 1358px #FFF , 168px 851px #FFF , 261px 1920px #FFF , 543px 869px #FFF , 1920px 167px #FFF , 101px 208px #FFF , 577px 1238px #FFF , 972px 1576px #FFF , 1317px 1684px #FFF , 1554px 397px #FFF , 1903px 310px #FFF , 161px 1544px #FFF , 1136px 334px #FFF , 235px 1963px #FFF , 1575px 1715px #FFF , 1881px 1160px #FFF , 223px 1651px #FFF , 588px 1437px #FFF , 1063px 696px #FFF , 228px 1070px #FFF , 251px 544px #FFF , 528px 489px #FFF , 1879px 707px #FFF , 1782px 1932px #FFF , 972px 650px #FFF , 868px 1872px #FFF , 683px 1899px #FFF , 1878px 314px #FFF , 1274px 851px #FFF , 1013px 403px #FFF , 1096px 436px #FFF , 79px 1841px #FFF , 317px 1184px #FFF , 1350px 171px #FFF , 1590px 1082px #FFF , 1334px 1584px #FFF , 1633px 755px #FFF , 1863px 1665px #FFF , 243px 1759px #FFF , 1229px 948px #FFF , 1605px 1271px #FFF , 1840px 1309px #FFF , 1241px 268px #FFF , 1401px 895px #FFF , 159px 323px #FFF , 501px 716px #FFF , 229px 113px #FFF , 764px 164px #FFF , 911px 677px #FFF , 1052px 888px #FFF , 1653px 1026px #FFF , 1568px 1068px #FFF , 1012px 1486px #FFF , 1097px 1134px #FFF , 366px 421px #FFF , 310px 640px #FFF , 1120px 1479px #FFF , 1177px 278px #FFF , 339px 1007px #FFF , 175px 1616px #FFF , 845px 774px #FFF , 422px 1101px #FFF , 767px 60px #FFF , 1550px 1829px #FFF , 1805px 726px #FFF , 381px 1908px #FFF , 1087px 1280px #FFF , 130px 1858px #FFF , 878px 1840px #FFF , 918px 1967px #FFF , 1788px 76px #FFF , 1258px 932px #FFF , 451px 1518px #FFF , 580px 419px #FFF , 1783px 493px #FFF , 669px 116px #FFF , 640px 1353px #FFF , 1525px 437px #FFF , 706px 1506px #FFF , 656px 808px #FFF , 1215px 117px #FFF , 88px 983px #FFF , 1971px 150px #FFF , 1254px 269px #FFF , 1182px 1725px #FFF , 1925px 543px #FFF , 1580px 1839px #FFF , 1872px 1279px #FFF , 493px 438px #FFF , 562px 1556px #FFF , 743px 1496px #FFF , 600px 1478px #FFF , 588px 1545px #FFF , 799px 1855px #FFF , 1593px 1254px #FFF , 688px 172px #FFF , 525px 714px #FFF , 1638px 343px #FFF , 1524px 1750px #FFF , 554px 858px #FFF , 372px 1388px #FFF , 1851px 39px #FFF , 1921px 808px #FFF , 215px 500px #FFF , 616px 85px #FFF , 865px 1913px #FFF , 574px 832px #FFF , 1784px 193px #FFF , 840px 1741px #FFF , 1789px 1218px #FFF , 198px 1868px #FFF , 620px 799px #FFF; }
+    box-shadow: 1150px 1237px #FFF , 1721px 1079px #FFF , 1873px 636px #FFF , 1003px 1854px #FFF , 165px 1789px #FFF , 803px 312px #FFF , 1478px 33px #FFF , 256px 1466px #FFF , 469px 100px #FFF , 1887px 1106px #FFF , 474px 1295px #FFF , 196px 547px #FFF , 1391px 89px #FFF , 1540px 126px #FFF , 1743px 1847px #FFF , 1800px 1896px #FFF , 1411px 174px #FFF , 1341px 413px #FFF , 1665px 487px #FFF , 1168px 667px #FFF , 126px 1166px #FFF , 137px 1636px #FFF , 301px 209px #FFF , 1198px 853px #FFF , 1642px 1790px #FFF , 204px 1352px #FFF , 347px 1466px #FFF , 1144px 1390px #FFF , 1487px 525px #FFF , 1011px 463px #FFF , 1191px 1563px #FFF , 673px 933px #FFF , 1460px 1835px #FFF , 1315px 309px #FFF , 1457px 467px #FFF , 1913px 1066px #FFF , 522px 369px #FFF , 170px 895px #FFF , 538px 1936px #FFF , 927px 1497px #FFF , 175px 955px #FFF , 1457px 1080px #FFF , 1484px 207px #FFF , 1744px 1759px #FFF , 221px 42px #FFF , 1545px 341px #FFF , 1255px 1963px #FFF , 338px 789px #FFF , 1278px 433px #FFF , 1298px 1688px #FFF , 271px 1562px #FFF , 188px 1968px #FFF , 239px 849px #FFF , 1441px 420px #FFF , 1836px 1994px #FFF , 1964px 1253px #FFF , 841px 741px #FFF , 830px 1562px #FFF , 1543px 686px #FFF , 193px 1456px #FFF , 548px 1133px #FFF , 1658px 1500px #FFF , 978px 1237px #FFF , 551px 1883px #FFF , 1523px 1177px #FFF , 1868px 1890px #FFF , 1418px 935px #FFF , 793px 1268px #FFF , 236px 535px #FFF , 1022px 872px #FFF , 1174px 1633px #FFF , 1695px 432px #FFF , 982px 1785px #FFF , 1784px 24px #FFF , 57px 1423px #FFF , 139px 1139px #FFF , 1593px 483px #FFF , 871px 64px #FFF , 548px 1914px #FFF , 1238px 1939px #FFF , 608px 1708px #FFF , 1114px 1824px #FFF , 783px 1094px #FFF , 1608px 1223px #FFF , 1776px 1099px #FFF , 354px 1907px #FFF , 1074px 290px #FFF , 131px 835px #FFF , 1635px 1483px #FFF , 502px 1139px #FFF , 1041px 1006px #FFF , 1524px 1245px #FFF , 549px 1725px #FFF , 750px 1093px #FFF , 1697px 1188px #FFF , 446px 1004px #FFF , 556px 1205px #FFF , 1069px 1569px #FFF , 600px 1178px #FFF , 426px 107px #FFF , 346px 1977px #FFF , 232px 832px #FFF , 1586px 1914px #FFF , 1394px 292px #FFF , 85px 860px #FFF , 914px 721px #FFF , 1278px 1799px #FFF , 1121px 70px #FFF , 1676px 500px #FFF , 1427px 777px #FFF , 1632px 554px #FFF , 465px 1447px #FFF , 296px 1302px #FFF , 1116px 1868px #FFF , 1545px 1364px #FFF , 581px 1305px #FFF , 519px 824px #FFF , 920px 1239px #FFF , 555px 569px #FFF , 1297px 458px #FFF , 772px 556px #FFF , 1773px 1018px #FFF , 607px 290px #FFF , 1242px 1767px #FFF , 1358px 648px #FFF , 845px 981px #FFF , 287px 656px #FFF , 1044px 590px #FFF , 682px 643px #FFF , 1981px 1446px #FFF , 809px 1849px #FFF , 1583px 1834px #FFF , 22px 1188px #FFF , 1211px 967px #FFF , 1899px 1413px #FFF , 1233px 820px #FFF , 50px 528px #FFF , 1820px 1874px #FFF , 1696px 1445px #FFF , 210px 1429px #FFF , 1119px 1628px #FFF , 1659px 1297px #FFF , 1274px 481px #FFF , 1865px 832px #FFF , 1822px 398px #FFF , 979px 172px #FFF , 1278px 1096px #FFF , 1444px 137px #FFF , 1360px 1547px #FFF , 415px 1396px #FFF , 1581px 507px #FFF; }
 
 /*# sourceMappingURL=rectangle.css.map */
